[gd_scene load_steps=3 format=2]

[ext_resource path="res://Boss 1 Fight.gd" type="Script" id=1]
[ext_resource path="res://assets/boss-splash-1.png" type="Texture" id=2]

[node name="Boss 1 Fight" type="Node"]
script = ExtResource( 1 )

[node name="Time until Boss" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="BossScreen" type="Sprite" parent="."]
visible = false
position = Vector2( 960.863, 541.783 )
texture = ExtResource( 2 )

[node name="BossScreenTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="Time until Boss" to="." method="_on_Time_until_Boss_timeout"]
[connection signal="timeout" from="BossScreenTimer" to="." method="_on_BossScreenTimer_timeout"]
